<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBody"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/colorBodyEditText"
        android:orientation="vertical"
        android:padding="@dimen/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/colorTitle"
            android:text="@string/addoptions"
            android:textColor="@color/colorBody"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/separation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/colorText"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/colorText"
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right" >

            <TextView
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/separation"
                android:text="@string/accept"
                android:textColor="@color/colorBodyEditText" />

            <TextView
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/separation"
                android:text="@string/cancel"
                android:textColor="@color/colorBodyEditText" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
